--- a/Program/BLDC/BLDC.ioc
+++ b/Program/BLDC/BLDC.ioc
@@ -1,33 +1,89 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.ClockPrescaler=ADC_CLOCK_ASYNC_DIV1
+ADC.ContinuousConvMode=ENABLE
+ADC.DMAContinuousRequests=ENABLE
+ADC.DataAlign=ADC_DATAALIGN_RIGHT
+ADC.DiscontinuousConvMode=DISABLE
+ADC.EOCSelection=ADC_EOC_SINGLE_SEQ_CONV
+ADC.EnableAnalogWatchDog=false
+ADC.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC.IPParameters=ContinuousConvMode,DMAContinuousRequests,EOCSelection,SamplingTime,ClockPrescaler,Resolution,DataAlign,ScanConvMode,DiscontinuousConvMode,Overrun,LowPowerAutoWait,LowPowerAutoPowerOff,ExternalTrigConvEdge,EnableAnalogWatchDog
+ADC.LowPowerAutoPowerOff=DISABLE
+ADC.LowPowerAutoWait=DISABLE
+ADC.Overrun=ADC_OVR_DATA_PRESERVED
+ADC.Resolution=ADC_RESOLUTION_12B
+ADC.SamplingTime=ADC_SAMPLETIME_7CYCLES_5
+ADC.ScanConvMode=ADC_SCAN_DIRECTION_FORWARD
+Dma.ADC.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC.0.Instance=DMA1_Channel1
+Dma.ADC.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC.0.Mode=DMA_CIRCULAR
+Dma.ADC.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.ADC.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F0
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP0=ADC
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM14
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.PinsNb=5
+Mcu.Pin10=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA0
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA7
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=11
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
 MxCube.Version=4.17.0
 MxDb.Version=DB.4.0.170
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
+PA0.Mode=IN0
+PA0.Signal=ADC_IN0
+PA1.Mode=IN1
+PA1.Signal=ADC_IN1
+PA10.GPIOParameters=GPIO_Speed,GPIO_FMA10,PinState,GPIO_Label
+PA10.GPIO_FMA10=SYSCFG_CFGR1_I2C_FMP_PA10
+PA10.GPIO_Label=OLED_SDA
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA10.Locked=true
+PA10.PinState=GPIO_PIN_SET
+PA10.Signal=GPIO_Output
 PA2.Mode=Asynchronous
 PA2.Signal=USART1_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART1_RX
+PA7.Locked=true
+PA7.Signal=S_TIM14_CH1
+PA9.GPIOParameters=GPIO_Speed,PinState,GPIO_FMA9,GPIO_Label
+PA9.GPIO_FMA9=SYSCFG_CFGR1_I2C_FMP_PA9
+PA9.GPIO_Label=OLED_SCL
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA9.Locked=true
+PA9.PinState=GPIO_PIN_SET
+PA9.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F0x0 Value Line
 PCC.MCU=STM32F030F4Px
@@ -63,7 +119,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=C\:\\Users\\weifengdq\\Documents\\GitHub\\BLDC_DRV11873\\Program\\BLDC
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART1_UART_Init-USART1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USART1_UART_Init-USART1-false-HAL,5-MX_ADC_Init-ADC-false-HAL,6-MX_TIM14_Init-TIM14-false-HAL
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -81,8 +137,14 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=12000000
+SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
+SH.S_TIM14_CH1.ConfNb=1
+TIM14.IPParameters=Period
+TIM14.Period=1000-1
 USART1.BaudRate=115200
 USART1.IPParameters=BaudRate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=BLDC
