--- a/Program/BLDC/BLDC.ioc
+++ b/Program/BLDC/BLDC.ioc
@@ -33,23 +33,26 @@ Mcu.IP1=DMA
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM14
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP5=TIM3
+Mcu.IP6=TIM14
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin2=PA0
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
-Mcu.Pin6=PA7
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=13
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
 MxCube.Version=4.17.0
@@ -60,6 +63,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
+NVIC.TIM3_IRQn=true\:2\:0\:true\:false\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
 PA1.Mode=IN1
@@ -75,6 +79,7 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART1_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART1_RX
+PA6.Signal=S_TIM3_CH1
 PA7.Locked=true
 PA7.Signal=S_TIM14_CH1
 PA9.GPIOParameters=GPIO_Speed,PinState,GPIO_FMA9,GPIO_Label
@@ -117,9 +122,9 @@ ProjectManager.ProjectFileName=BLDC.ioc
 ProjectManager.ProjectName=BLDC
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
-ProjectManager.ToolChainLocation=C\:\\Users\\weifengdq\\Documents\\GitHub\\BLDC_DRV11873\\Program\\BLDC
+ProjectManager.ToolChainLocation=C\:\\Users\\weifengdq\\Desktop\\Program\\BLDC
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USART1_UART_Init-USART1-false-HAL,5-MX_ADC_Init-ADC-false-HAL,6-MX_TIM14_Init-TIM14-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USART1_UART_Init-USART1-false-HAL,5-MX_ADC_Init-ADC-false-HAL,6-MX_TIM14_Init-TIM14-false-HAL,7-MX_TIM3_Init-TIM3-false-HAL
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -139,12 +144,19 @@ RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=12000000
 SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
 SH.S_TIM14_CH1.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
+SH.S_TIM3_CH1.ConfNb=1
 TIM14.IPParameters=Period
 TIM14.Period=1000-1
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=65535
+TIM3.Prescaler=48-1
 USART1.BaudRate=115200
 USART1.IPParameters=BaudRate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=BLDC
